force-app/main/default/objects/Reciept__c/Reciept__c.object-meta.xml
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <label>Reciept Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>