force-app/main/default/objects/Reciept__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Зарплата</fullName>
            </value>
            <value>
                <fullName>Детские</fullName>
            </value>
            <value>
                <fullName>Обмен валюты</fullName>
            </value>
            <value>
                <fullName>Подарок</fullName>
            </value>
            <value>
                <fullName>Коррекция+</fullName>
            </value>
            <value>
                <fullName>Другие</fullName>
            </value>
            <value>
                <fullName>Ревизия</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>