force-app/main/default/objects/Reciept__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Receipt_Date</label>
    <type>Date</type>
</CustomField>