force-app/main/default/objects/Reciept__c/fields/ValletId__c.field-meta.xml
<CustomField>
    <fullName>ValletId__c</fullName>
    <label>Vallet</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>